# corporate-athelete-scorer

./: .env.example  .gitignore  README.md  app.py  fix_tests.py  main.py  pyproject.toml  requirements-backup.txt  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: settings.py
src/: coach_engine.py  score_engine.py
src/styles/: main.css
src/utils/: lead_manager.py
tests/: test_score_engine.py
