[project]
name = "corporate-athelete-scorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.0.0",
    "google-genai>=0.1.0",
    "gspread>=5.0.0",
    "huggingface-hub>=0.20.0",
    "markdown>=3.5.0",
    "pandas>=2.0.0",
    "pydantic>=2.13.4",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.17.1",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.30.0",
    "tenacity>=9.1.4",
]
[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true